--- a/tests/index.html
+++ b/tests/index.html
@@ -33,15 +33,14 @@
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
 
-    <script>
-      window.BorrowersENV = {{ENV}};
-      window.EmberENV = window.BorrowersENV.EmberENV;
-    </script>
     <script src="assets/vendor.js"></script>
     <script src="assets/test-support.js"></script>
     <script src="assets/borrowers.js"></script>
     <script src="testem.js"></script>
     <script>
+      window.BorrowersENV = require('borrowers/config/environment')['default'];
+      window.EmberENV = window.BorrowersENV.EmberENV;
+
       require('borrowers/tests/test-helper');
     </script>
     <script src="assets/test-loader.js"></script>
