--- a/app/index.html
+++ b/app/index.html
@@ -13,12 +13,13 @@
     <link rel="stylesheet" href="assets/borrowers.css">
   </head>
   <body>
+    <script type="text/javascript">
+      window.EmberENV = {{EMBER_ENV}};
+    </script>
     <script src="assets/vendor.js"></script>
     <script src="assets/borrowers.js"></script>
-    <script>
-      window.BorrowersENV = require('borrowers/config/environment')['default'];
-      window.EmberENV = window.BorrowersENV.EmberENV;
-      window.Borrowers = require('borrowers/app')['default'].create(BorrowersENV.APP);
+    <script type="text/javascript">
+      window.Borrowers = require('borrowers/app')['default'].create({{APP_CONFIG}});
     </script>
   </body>
 </html>
