--- a/app/index.html
+++ b/app/index.html
@@ -7,19 +7,13 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    {{BASE_TAG}}
+    {{content-for 'head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/borrowers.css">
   </head>
   <body>
-    <script type="text/javascript">
-      window.EmberENV = {{EMBER_ENV}};
-    </script>
     <script src="assets/vendor.js"></script>
     <script src="assets/borrowers.js"></script>
-    <script type="text/javascript">
-      window.Borrowers = require('borrowers/app')['default'].create({{APP_CONFIG}});
-    </script>
   </body>
 </html>
