--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="assets/borrowers.css">
   </head>
   <body>
+    {{content-for 'body'}}
+
     <script src="assets/vendor.js"></script>
     <script src="assets/borrowers.js"></script>
   </body>
